--- a/client/src/index.html
+++ b/client/src/index.html
@@ -23,9 +23,13 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <div class="container">
 
-    <div ng-view></div>
+      <navbar></navbar>
+      <div ng-view class="content-container">
+      </div>
 
+    </div>
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
